@@ -6,8 +6,6 @@ import com.distasilucas.cryptobalancetracker.exception.DuplicatedCryptoPlatFormE
 import com.distasilucas.cryptobalancetracker.exception.UserCryptoNotFoundException;
 import com.distasilucas.cryptobalancetracker.model.request.usercrypto.UserCryptoRequest;
 import com.distasilucas.cryptobalancetracker.model.response.coingecko.CoingeckoCrypto;
-import com.distasilucas.cryptobalancetracker.model.response.usercrypto.PageUserCryptoResponse;
-import com.distasilucas.cryptobalancetracker.model.response.usercrypto.UserCryptoResponse;
 import com.distasilucas.cryptobalancetracker.repository.UserCryptoRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -23,10 +21,13 @@ import java.util.List;
 import java.util.Optional;
 
 import static com.distasilucas.cryptobalancetracker.TestDataSource.getBitcoinCryptoEntity;
-import static com.distasilucas.cryptobalancetracker.TestDataSource.getPlatformEntity;
+import static com.distasilucas.cryptobalancetracker.TestDataSource.getBinancePlatformEntity;
 import static com.distasilucas.cryptobalancetracker.TestDataSource.getUserCrypto;
 import static com.distasilucas.cryptobalancetracker.constants.ExceptionConstants.DUPLICATED_CRYPTO_PLATFORM;
 import static com.distasilucas.cryptobalancetracker.constants.ExceptionConstants.USER_CRYPTO_ID_NOT_FOUND;
+import static com.distasilucas.cryptobalancetracker.model.CacheType.GOALS_CACHES;
+import static com.distasilucas.cryptobalancetracker.model.CacheType.INSIGHTS_CACHES;
+import static com.distasilucas.cryptobalancetracker.model.CacheType.USER_CRYPTOS_CACHES;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -53,22 +54,26 @@ class UserCryptoServiceTest {
     @Mock
     private CacheService cacheServiceMock;
 
+    @Mock
+    private UserCryptoService userCryptoServiceMock;
+
     private UserCryptoService userCryptoService;
 
     @BeforeEach
     void setUp() {
         openMocks(this);
-        userCryptoService = new UserCryptoService(userCryptoRepositoryMock, platformServiceMock, cryptoServiceMock, cacheServiceMock);
+        userCryptoService = new UserCryptoService(userCryptoRepositoryMock, platformServiceMock, cryptoServiceMock, cacheServiceMock, userCryptoServiceMock);
     }
 
     @Test
     void shouldFindUserCryptoById() {
         var userCrypto = getUserCrypto();
+        var platformEntity = getBinancePlatformEntity();
         var expected = new UserCrypto(
             "af827ac7-d642-4461-a73c-b31ca6f6d13d",
-            "bitcoin",
             new BigDecimal("0.25"),
-            "4f663841-7c82-4d0f-a756-cf7d4e2d3bc6"
+            platformEntity,
+            getBitcoinCryptoEntity()
         );
 
         when(userCryptoRepositoryMock.findById("af827ac7-d642-4461-a73c-b31ca6f6d13d")).thenReturn(Optional.of(userCrypto));
@@ -93,56 +98,12 @@ class UserCryptoServiceTest {
     }
 
     @Test
-    void shouldRetrieveUserCrypto() {
-        var userCrypto = getUserCrypto();
-        var crypto = getBitcoinCryptoEntity();
-        var platform = getPlatformEntity();
-        var expected = new UserCryptoResponse(
-            "af827ac7-d642-4461-a73c-b31ca6f6d13d",
-            "Bitcoin",
-            "0.25",
-            "BINANCE"
-        );
-
-        when(userCryptoRepositoryMock.findById("af827ac7-d642-4461-a73c-b31ca6f6d13d")).thenReturn(Optional.of(userCrypto));
-        when(cryptoServiceMock.retrieveCryptoInfoById("bitcoin")).thenReturn(crypto);
-        when(platformServiceMock.retrievePlatformById("4f663841-7c82-4d0f-a756-cf7d4e2d3bc6")).thenReturn(platform);
-
-        var userCryptoResponse = userCryptoService.retrieveUserCryptoById("af827ac7-d642-4461-a73c-b31ca6f6d13d");
-
-        assertThat(userCryptoResponse)
-            .usingRecursiveComparison()
-            .isEqualTo(expected);
-    }
-
-    @Test
-    void shouldThrowUserCryptoNotFoundExceptionIfUserCryptoDoesNotExists() {
-        when(userCryptoRepositoryMock.findById("af827ac7-d642-4461-a73c-b31ca6f6d13d")).thenReturn(Optional.empty());
-
-        var exception = assertThrows(
-            UserCryptoNotFoundException.class,
-            () -> userCryptoService.retrieveUserCryptoById("af827ac7-d642-4461-a73c-b31ca6f6d13d")
-        );
-
-        assertEquals(USER_CRYPTO_ID_NOT_FOUND.formatted("af827ac7-d642-4461-a73c-b31ca6f6d13d"), exception.getMessage());
-    }
-
-    @Test
     void shouldRetrieveUserCryptosByPage() {
         var userCrypto = getUserCrypto();
-        var platformEntity = getPlatformEntity();
-        var crypto = getBitcoinCryptoEntity();
-        var expected = new PageUserCryptoResponse(
-            1,
-            1,
-            false,
-            List.of(userCrypto.toUserCryptoResponse("Bitcoin", "BINANCE"))
-        );
+        var expected = new PageImpl<>(Collections.singletonList(userCrypto), PageRequest.of(0, 10), 1);
 
         when(userCryptoRepositoryMock.findAll(PageRequest.of(0, 10)))
             .thenReturn(new PageImpl<>(List.of(userCrypto)));
-        when(platformServiceMock.retrievePlatformById("4f663841-7c82-4d0f-a756-cf7d4e2d3bc6")).thenReturn(platformEntity);
-        when(cryptoServiceMock.retrieveCryptoInfoById("bitcoin")).thenReturn(crypto);
 
         var pageUserCryptoResponse = userCryptoService.retrieveUserCryptosByPage(0);
 
@@ -154,49 +115,34 @@ class UserCryptoServiceTest {
     @Test
     void shouldRetrieveUserCryptosByPageWithNextPage() {
         var userCrypto = getUserCrypto();
-        var platformEntity = getPlatformEntity();
-        var crypto = getBitcoinCryptoEntity();
-        var userCryptosPage = List.of(userCrypto, userCrypto);
-        var pageImpl = new PageImpl<>(userCryptosPage, PageRequest.of(0, 2), 10L);
-        var expected = new PageUserCryptoResponse(
-            1,
-            5,
-            true,
-            List.of(
-                userCrypto.toUserCryptoResponse("Bitcoin", "BINANCE"),
-                userCrypto.toUserCryptoResponse("Bitcoin", "BINANCE")
-            )
-        );
+        var userCryptos = List.of(userCrypto, userCrypto);
+        var pageImpl = new PageImpl<>(userCryptos, PageRequest.of(0, 2), 10L);
 
         when(userCryptoRepositoryMock.findAll(PageRequest.of(0, 10))).thenReturn(pageImpl);
-        when(platformServiceMock.retrievePlatformById("4f663841-7c82-4d0f-a756-cf7d4e2d3bc6")).thenReturn(platformEntity);
-        when(cryptoServiceMock.retrieveCryptoInfoById("bitcoin")).thenReturn(crypto);
 
-        var pageUserCryptoResponse = userCryptoService.retrieveUserCryptosByPage(0);
+        var pageUserCrypto = userCryptoService.retrieveUserCryptosByPage(0);
 
-        assertThat(pageUserCryptoResponse)
+        assertThat(pageUserCrypto)
             .usingRecursiveComparison()
-            .isEqualTo(expected);
+            .isEqualTo(pageImpl);
     }
 
     @Test
     void shouldRetrieveEmptyUserCryptosForPage() {
-        var expected = new PageUserCryptoResponse(1, 1, false, Collections.emptyList());
-
         when(userCryptoRepositoryMock.findAll(PageRequest.of(0, 10))).thenReturn(Page.empty());
 
         var pageUserCryptoResponse = userCryptoService.retrieveUserCryptosByPage(0);
 
         assertThat(pageUserCryptoResponse)
             .usingRecursiveComparison()
-            .isEqualTo(expected);
+            .isEqualTo(Page.empty());
     }
 
     @Test
     void shouldSaveUserCrypto() {
         var userCryptoRequest = getUserCryptoRequest();
         var coingeckoCrypto = getCoingeckoCrypto();
-        var platformEntity = getPlatformEntity();
+        var platformEntity = getBinancePlatformEntity();
 
         var captor = ArgumentCaptor.forClass(UserCrypto.class);
         when(cryptoServiceMock.retrieveCoingeckoCryptoInfoByNameOrId("bitcoin")).thenReturn(coingeckoCrypto);
@@ -206,19 +152,19 @@ class UserCryptoServiceTest {
             "4f663841-7c82-4d0f-a756-cf7d4e2d3bc6"
         )).thenReturn(Optional.empty());
         when(userCryptoRepositoryMock.save(captor.capture())).thenAnswer(answer -> captor.getValue());
-        doNothing().when(cryptoServiceMock).saveCryptoIfNotExists("bitcoin");
+        when(cryptoServiceMock.retrieveCryptoInfoById("bitcoin")).thenReturn(getBitcoinCryptoEntity());
 
         var userCryptoResponse = userCryptoService.saveUserCrypto(userCryptoRequest);
 
         verify(userCryptoRepositoryMock, times(1)).save(captor.getValue());
-        verify(cacheServiceMock, times(1)).invalidateUserCryptosCaches();
+        verify(cacheServiceMock, times(1)).invalidate(USER_CRYPTOS_CACHES, GOALS_CACHES, INSIGHTS_CACHES);
         assertThat(userCryptoResponse)
             .usingRecursiveComparison()
-            .isEqualTo(new UserCryptoResponse(
-                captor.getValue().id(),
-                "Bitcoin",
-                "1",
-                "BINANCE"
+            .isEqualTo(new UserCrypto(
+                captor.getValue().getId(),
+                new BigDecimal("1"),
+                getBinancePlatformEntity(),
+                getBitcoinCryptoEntity()
             ));
     }
 
@@ -226,7 +172,7 @@ class UserCryptoServiceTest {
     void shouldThrowDuplicatedCryptoPlatFormExceptionWHenSavingUserCrypto() {
         var userCryptoRequest = getUserCryptoRequest();
         var coingeckoCrypto = getCoingeckoCrypto();
-        var platformEntity = getPlatformEntity();
+        var platformEntity = getBinancePlatformEntity();
         var userCrypto = getUserCrypto();
 
         when(cryptoServiceMock.retrieveCoingeckoCryptoInfoByNameOrId("bitcoin")).thenReturn(coingeckoCrypto);
@@ -242,38 +188,34 @@ class UserCryptoServiceTest {
         );
 
         verify(userCryptoRepositoryMock, never()).save(any());
+        verify(cacheServiceMock, never()).invalidate(any());
 
         assertEquals(DUPLICATED_CRYPTO_PLATFORM.formatted("Bitcoin", "BINANCE"), exception.getMessage());
     }
 
     @Test
     void shouldUpdateQuantityUserCrypto() {
+        var captor = ArgumentCaptor.forClass(UserCrypto.class);
         var userCryptoRequest = new UserCryptoRequest("bitcoin", new BigDecimal("1.25"), "4f663841-7c82-4d0f-a756-cf7d4e2d3bc6");
         var userCrypto = getUserCrypto();
-        var updatedUserCrypto = new UserCrypto(
-            "af827ac7-d642-4461-a73c-b31ca6f6d13d",
-            "bitcoin",
-            new BigDecimal("1.25"),
-            "4f663841-7c82-4d0f-a756-cf7d4e2d3bc6"
-        );
-        var platformEntity = getPlatformEntity();
+        var platformEntity = getBinancePlatformEntity();
         var coingeckoCrypto = getCoingeckoCrypto();
-        var expected = new UserCryptoResponse("af827ac7-d642-4461-a73c-b31ca6f6d13d", "Bitcoin", "1.25", "BINANCE");
+        var expected = new UserCrypto("af827ac7-d642-4461-a73c-b31ca6f6d13d", new BigDecimal("1.25"), getBinancePlatformEntity(), getBitcoinCryptoEntity());
 
-        when(userCryptoRepositoryMock.findById("af827ac7-d642-4461-a73c-b31ca6f6d13d")).thenReturn(Optional.of(userCrypto));
+        when(userCryptoServiceMock.findUserCryptoById("af827ac7-d642-4461-a73c-b31ca6f6d13d")).thenReturn(userCrypto);
         when(platformServiceMock.retrievePlatformById("4f663841-7c82-4d0f-a756-cf7d4e2d3bc6")).thenReturn(platformEntity);
         when(cryptoServiceMock.retrieveCoingeckoCryptoInfoByNameOrId("bitcoin")).thenReturn(coingeckoCrypto);
         when(userCryptoRepositoryMock.findByCoingeckoCryptoIdAndPlatformId(
             "bitcoin",
             "4f663841-7c82-4d0f-a756-cf7d4e2d3bc6"
         )).thenReturn(Optional.empty());
-        when(userCryptoRepositoryMock.save(updatedUserCrypto)).thenReturn(updatedUserCrypto);
+        when(userCryptoRepositoryMock.save(captor.capture())).thenAnswer(answer -> captor.getValue());
 
         var userCryptoResponse =
             userCryptoService.updateUserCrypto("af827ac7-d642-4461-a73c-b31ca6f6d13d", userCryptoRequest);
 
-        verify(userCryptoRepositoryMock, times(1)).save(updatedUserCrypto);
-        verify(cacheServiceMock, times(1)).invalidateUserCryptosCaches();
+        verify(userCryptoRepositoryMock, times(1)).save(captor.getValue());
+        verify(cacheServiceMock, times(1)).invalidate(USER_CRYPTOS_CACHES, GOALS_CACHES, INSIGHTS_CACHES);
         assertThat(userCryptoResponse)
             .usingRecursiveComparison()
             .isEqualTo(expected);
@@ -281,35 +223,69 @@ class UserCryptoServiceTest {
 
     @Test
     void shouldFullUpdateUserCrypto() {
+        var captor = ArgumentCaptor.forClass(UserCrypto.class);
         var userCryptoRequest = new UserCryptoRequest("bitcoin", new BigDecimal("1.25"), "123e4567-e89b-12d3-a456-426614174333");
         var userCrypto = getUserCrypto();
-        var updatedUserCrypto = new UserCrypto(
-            "af827ac7-d642-4461-a73c-b31ca6f6d13d",
-            "bitcoin",
-            new BigDecimal("1.25"),
-            "123e4567-e89b-12d3-a456-426614174333"
-        );
         var platformEntity = new Platform("123e4567-e89b-12d3-a456-426614174333", "COINBASE");
         var coingeckoCrypto = getCoingeckoCrypto();
-        var expected = new UserCryptoResponse("af827ac7-d642-4461-a73c-b31ca6f6d13d", "Bitcoin", "1.25", "COINBASE");
+        var expected = new UserCrypto(
+            "af827ac7-d642-4461-a73c-b31ca6f6d13d",
+            new BigDecimal("1.25"),
+            platformEntity,
+            getBitcoinCryptoEntity()
+        );
 
-        when(userCryptoRepositoryMock.findById("af827ac7-d642-4461-a73c-b31ca6f6d13d")).thenReturn(Optional.of(userCrypto));
+        when(userCryptoServiceMock.findUserCryptoById("af827ac7-d642-4461-a73c-b31ca6f6d13d")).thenReturn(userCrypto);
         when(platformServiceMock.retrievePlatformById("123e4567-e89b-12d3-a456-426614174333")).thenReturn(platformEntity);
         when(cryptoServiceMock.retrieveCoingeckoCryptoInfoByNameOrId("bitcoin")).thenReturn(coingeckoCrypto);
         when(userCryptoRepositoryMock.findByCoingeckoCryptoIdAndPlatformId(
             "bitcoin",
             "123e4567-e89b-12d3-a456-426614174333"
         )).thenReturn(Optional.empty());
-        when(userCryptoRepositoryMock.save(updatedUserCrypto)).thenReturn(updatedUserCrypto);
+        when(userCryptoRepositoryMock.save(captor.capture())).thenAnswer(answer -> captor.getValue());
 
         var userCryptoResponse =
             userCryptoService.updateUserCrypto("af827ac7-d642-4461-a73c-b31ca6f6d13d", userCryptoRequest);
 
-        verify(userCryptoRepositoryMock, times(1)).save(updatedUserCrypto);
-        verify(cacheServiceMock, times(1)).invalidateUserCryptosCaches();
+        verify(userCryptoRepositoryMock, times(1)).save(captor.getValue());
+        verify(cacheServiceMock, times(1)).invalidate(USER_CRYPTOS_CACHES, GOALS_CACHES, INSIGHTS_CACHES);
         assertThat(userCryptoResponse)
             .usingRecursiveComparison()
             .isEqualTo(expected);
+    }
+
+    @Test
+    void shouldNotUpdateCryptoNameNorId() {
+        var captor = ArgumentCaptor.forClass(UserCrypto.class);
+        var userCryptoRequest = new UserCryptoRequest("ethereum", new BigDecimal("1.25"), "123e4567-e89b-12d3-a456-426614174333");
+        var platformEntity = new Platform("123e4567-e89b-12d3-a456-426614174333", "COINBASE");
+        var coingeckoCrypto = getCoingeckoCrypto();
+        var userCrypto = new UserCrypto(
+            "af827ac7-d642-4461-a73c-b31ca6f6d13d",
+            new BigDecimal("0.25"),
+            platformEntity,
+            getBitcoinCryptoEntity()
+        );
+
+        when(userCryptoServiceMock.findUserCryptoById("af827ac7-d642-4461-a73c-b31ca6f6d13d")).thenReturn(userCrypto);
+        when(platformServiceMock.retrievePlatformById("123e4567-e89b-12d3-a456-426614174333")).thenReturn(platformEntity);
+        when(cryptoServiceMock.retrieveCoingeckoCryptoInfoByNameOrId("bitcoin")).thenReturn(coingeckoCrypto);
+        when(userCryptoRepositoryMock.save(captor.capture())).thenAnswer(answer -> captor.getValue());
+
+        var userCryptoResponse =
+            userCryptoService.updateUserCrypto("af827ac7-d642-4461-a73c-b31ca6f6d13d", userCryptoRequest);
+
+        verify(userCryptoRepositoryMock, times(1)).save(captor.getValue());
+        verify(cacheServiceMock, times(1)).invalidate(USER_CRYPTOS_CACHES, GOALS_CACHES, INSIGHTS_CACHES);
+
+        assertThat(userCryptoResponse)
+            .usingRecursiveComparison()
+            .isEqualTo(new UserCrypto(
+                "af827ac7-d642-4461-a73c-b31ca6f6d13d",
+                new BigDecimal("1.25"),
+                platformEntity,
+                getBitcoinCryptoEntity()
+            ));
     }
 
     @Test
@@ -320,7 +296,7 @@ class UserCryptoServiceTest {
         var platformEntity = new Platform("123e4567-e89b-12d3-a456-426614174333", "COINBASE");
         var coingeckoCrypto = getCoingeckoCrypto();
 
-        when(userCryptoRepositoryMock.findById("af827ac7-d642-4461-a73c-b31ca6f6d13d")).thenReturn(Optional.of(userCrypto));
+        when(userCryptoServiceMock.findUserCryptoById("af827ac7-d642-4461-a73c-b31ca6f6d13d")).thenReturn(userCrypto);
         when(platformServiceMock.retrievePlatformById("123e4567-e89b-12d3-a456-426614174333")).thenReturn(platformEntity);
         when(cryptoServiceMock.retrieveCoingeckoCryptoInfoByNameOrId("bitcoin")).thenReturn(coingeckoCrypto);
         when(userCryptoRepositoryMock.findByCoingeckoCryptoIdAndPlatformId(
@@ -334,6 +310,7 @@ class UserCryptoServiceTest {
         );
 
         verify(userCryptoRepositoryMock, never()).save(any());
+        verify(cacheServiceMock, never()).invalidate(any());
 
         assertEquals(DUPLICATED_CRYPTO_PLATFORM.formatted("Bitcoin", "COINBASE"), exception.getMessage());
     }
@@ -342,7 +319,7 @@ class UserCryptoServiceTest {
     void shouldDeleteUserCrypto() {
         var userCrypto = getUserCrypto();
 
-        when(userCryptoRepositoryMock.findById("af827ac7-d642-4461-a73c-b31ca6f6d13d")).thenReturn(Optional.of(userCrypto));
+        when(userCryptoServiceMock.findUserCryptoById("af827ac7-d642-4461-a73c-b31ca6f6d13d")).thenReturn(userCrypto);
         doNothing().when(userCryptoRepositoryMock).deleteById("af827ac7-d642-4461-a73c-b31ca6f6d13d");
         doNothing().when(cryptoServiceMock).deleteCryptoIfNotUsed("bitcoin");
 
@@ -350,12 +327,15 @@ class UserCryptoServiceTest {
 
         verify(userCryptoRepositoryMock, times(1)).deleteById("af827ac7-d642-4461-a73c-b31ca6f6d13d");
         verify(cryptoServiceMock, times(1)).deleteCryptoIfNotUsed("bitcoin");
-        verify(cacheServiceMock, times(1)).invalidateUserCryptosCaches();
+        verify(cacheServiceMock, times(1)).invalidate(USER_CRYPTOS_CACHES, GOALS_CACHES, INSIGHTS_CACHES);
     }
 
     @Test
     void shouldThrowUserCryptoNotFoundExceptionWHenDeletingUserCrypto() {
-        when(userCryptoRepositoryMock.findById("af827ac7-d642-4461-a73c-b31ca6f6d13d")).thenReturn(Optional.empty());
+        var exceptionMessage = USER_CRYPTO_ID_NOT_FOUND.formatted("af827ac7-d642-4461-a73c-b31ca6f6d13d");
+
+        when(userCryptoServiceMock.findUserCryptoById("af827ac7-d642-4461-a73c-b31ca6f6d13d"))
+            .thenThrow(new UserCryptoNotFoundException(exceptionMessage));
 
         var exception = assertThrows(
             UserCryptoNotFoundException.class,
@@ -364,12 +344,37 @@ class UserCryptoServiceTest {
 
         verify(userCryptoRepositoryMock, never()).deleteById("af827ac7-d642-4461-a73c-b31ca6f6d13d");
 
-        assertEquals(USER_CRYPTO_ID_NOT_FOUND.formatted("af827ac7-d642-4461-a73c-b31ca6f6d13d"), exception.getMessage());
+        assertEquals(exceptionMessage, exception.getMessage());
+    }
+
+    @Test
+    void shouldDeleteUserCryptos() {
+        var userCrypto = getUserCrypto();
+
+        doNothing().when(userCryptoRepositoryMock).deleteAll(List.of(userCrypto));
+        doNothing().when(cryptoServiceMock).deleteCryptosIfNotUsed(List.of("bitcoin"));
+        doNothing().when(cacheServiceMock).invalidate(USER_CRYPTOS_CACHES, GOALS_CACHES, INSIGHTS_CACHES);
+
+        userCryptoService.deleteUserCryptos(List.of(userCrypto));
+
+        verify(userCryptoRepositoryMock, times(1)).deleteAll(List.of(userCrypto));
+        verify(cryptoServiceMock, times(1)).deleteCryptosIfNotUsed(List.of("bitcoin"));
+        verify(cacheServiceMock, times(1)).invalidate(USER_CRYPTOS_CACHES, GOALS_CACHES, INSIGHTS_CACHES);
+    }
+
+    @Test
+    void shouldNotDeleteUserCryptosIfListItsEmpty() {
+        userCryptoService.deleteUserCryptos(Collections.emptyList());
+
+        verify(userCryptoRepositoryMock, never()).deleteAll(any());
+        verify(cryptoServiceMock, never()).deleteCryptosIfNotUsed(any());
+        verify(cacheServiceMock, never()).invalidate(any());
     }
 
     @Test
     void shouldFindAllByCoingeckoCryptoId() {
         var userCrypto = getUserCrypto();
+        var platformEntity = new Platform("4f663841-7c82-4d0f-a756-cf7d4e2d3bc6", "BINANCE");
 
         when(userCryptoRepositoryMock.findAllByCoingeckoCryptoId("bitcoin")).thenReturn(List.of(userCrypto));
 
@@ -380,9 +385,9 @@ class UserCryptoServiceTest {
             .isEqualTo(List.of(
                 new UserCrypto(
                     "af827ac7-d642-4461-a73c-b31ca6f6d13d",
-                    "bitcoin",
                     new BigDecimal("0.25"),
-                    "4f663841-7c82-4d0f-a756-cf7d4e2d3bc6"
+                    platformEntity,
+                    getBitcoinCryptoEntity()
                 )
             ));
     }
@@ -413,7 +418,7 @@ class UserCryptoServiceTest {
         userCryptoService.saveOrUpdateAll(userCryptos);
 
         verify(userCryptoRepositoryMock, times(1)).saveAll(userCryptos);
-        verify(cacheServiceMock, times(1)).invalidateUserCryptosCaches();
+        verify(cacheServiceMock, times(1)).invalidate(USER_CRYPTOS_CACHES, GOALS_CACHES, INSIGHTS_CACHES);
     }
 
     @Test
@@ -429,9 +434,9 @@ class UserCryptoServiceTest {
             .isEqualTo(List.of(
                 new UserCrypto(
                     "af827ac7-d642-4461-a73c-b31ca6f6d13d",
-                    "bitcoin",
                     new BigDecimal("0.25"),
-                    "4f663841-7c82-4d0f-a756-cf7d4e2d3bc6"
+                    getBinancePlatformEntity(),
+                    getBitcoinCryptoEntity()
                 )
             ));
     }
@@ -449,9 +454,9 @@ class UserCryptoServiceTest {
             .isEqualTo(List.of(
                 new UserCrypto(
                     "af827ac7-d642-4461-a73c-b31ca6f6d13d",
-                    "bitcoin",
                     new BigDecimal("0.25"),
-                    "4f663841-7c82-4d0f-a756-cf7d4e2d3bc6"
+                    getBinancePlatformEntity(),
+                    getBitcoinCryptoEntity()
                 )
             ));
     }
